daft-derive/tests/fixtures/invalid/struct-field-not-diffable.stderr
error[E0277]: the trait bound `NonDiffable: Diffable` is not satisfied
 --> tests/fixtures/invalid/struct-field-not-diffable.rs:8:5
  |
8 |     b: NonDiffable,
  |     ^ the trait `Diffable` is not implemented for `NonDiffable`
  |
  = help: the following other types implement trait `Diffable`:
            &'a T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others

error[E0277]: the trait bound `NonDiffable: Diffable` is not satisfied
 --> tests/fixtures/invalid/struct-field-not-diffable.rs:5:10
  |
5 | #[derive(Diffable)]
  |          ^^^^^^^^ the trait `Diffable` is not implemented for `NonDiffable`
  |
  = help: the following other types implement trait `Diffable`:
            &'a T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
  = note: this error originates in the derive macro `Diffable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NonDiffable: Diffable` is not satisfied in `MyStructDiff<'__daft>`
 --> tests/fixtures/invalid/struct-field-not-diffable.rs:5:10
  |
5 | #[derive(Diffable)]
  |          ^^^^^^^^ within `MyStructDiff<'__daft>`, the trait `Diffable` is not implemented for `NonDiffable`
  |
  = help: the following other types implement trait `Diffable`:
            &'a T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
note: required because it appears within the type `MyStructDiff<'__daft>`
 --> tests/fixtures/invalid/struct-field-not-diffable.rs:5:10
  |
5 | #[derive(Diffable)]
  |          ^^^^^^^^
note: required by a bound in `daft::Diffable::Diff`
 --> $WORKSPACE/daft/src/diffable.rs
  |
  | /     type Diff<'daft>
  | |     where
  | |         Self: 'daft;
  | |____________________^ required by this bound in `Diffable::Diff`
  = note: this error originates in the derive macro `Diffable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NonDiffable: Diffable` is not satisfied in `MyStructDiff<'__daft>`
 --> tests/fixtures/invalid/struct-field-not-diffable.rs:5:10
  |
5 | #[derive(Diffable)]
  |          ^^^^^^^^ within `MyStructDiff<'__daft>`, the trait `Diffable` is not implemented for `NonDiffable`
  |
  = help: the following other types implement trait `Diffable`:
            &'a T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
note: required because it appears within the type `MyStructDiff<'__daft>`
 --> tests/fixtures/invalid/struct-field-not-diffable.rs:5:10
  |
5 | #[derive(Diffable)]
  |          ^^^^^^^^
  = note: the return type of a function must have a statically known size
  = note: this error originates in the derive macro `Diffable` (in Nightly builds, run with -Z macro-backtrace for more info)
